--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <script src="/Portfolio/scripts/hypertension.js"></script>
 <script src="/Portfolio/scripts/mh_intake.js"></script>
+<script src="/Portfolio/scripts/compute"></script>
 
 <!-- <h2>Try a Sample Mental Health Intake Prompt</h2>
 <div>
