--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@ SOURCE CHECK
     mh_intake: {
       script: SCRIPT_MH_INTAKE,
       llmProfile: "mentalHealthIntake",
+    },
+    compute: {
+      script: SCRIPT_COMPUTE,
+      llmProfile: "hypertensionEducation",
     }
   };
 
