--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <option value=""></option>
   <option value="hypertension">Hypertension education</option>
   <option value="mh_intake">Mental health intake (therapy)</option>
+  <option value="compute">Example using computations</option>
 </select>
 </div>
 <button id="headerToggle" class="header-toggle" aria-label="Show header">
