--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ SOURCE CHECK
   "Source Check: Consistent with AHA/NIH/CDC educational guidance on hypertension."
 `.trim(),
     
-hypertensionFeedback:'
+hypertensionFeedback:`
 You are an educational assistant explaining high blood pressure (hypertension)
 in plain, patient-friendly language.
 
@@ -136,7 +136,7 @@ OUTPUT STYLE
 
 SOURCE CHECK
 - At the end of your answer, add a single line:
-  "Source Check: Consistent with AHA/NIH/CDC educational guidance on hypertension."'.trim(),
+  "Source Check: Consistent with AHA/NIH/CDC educational guidance on hypertension."`.trim(),
 
     mentalHealthIntake: `
 You are a supportive mental-health intake assistant.
